--- a/stylesheets/class.scss
+++ b/stylesheets/class.scss
@@ -491,8 +491,6 @@ body {
 				width: 100%;
 				height: 12rem;
 				position: relative;
-				//@include flexbox();
-				//@include justify-content(center);
 				.cost-tab__icon-icon {
 					width: 70%;
 					height: auto;
@@ -1038,5 +1036,261 @@ body {
 }
 }
 @media screen and (max-width: 768px) {
-	
+.jumbotron {
+	.jumbotron-img {
+		img {
+			width: auto;
+			height: 100%;
+		}
+	}
+}
+.container {
+	.container-title {
+		.title-line {
+		}
+		.title {
+		font-size: 2rem;
+		}
+	}
+	.container-content {
+		.icon-warpper {
+			padding: 0 10%;
+			.icon-tab {
+				width: calc(84% / 3);
+				margin-left: 8%;
+				.icon-tab__img {
+					width: 100%;
+					height: 6rem;
+				}
+				.icon-tab__subtitle {
+					margin-top: 2rem;
+					font-size: 1rem;
+					line-height: 1.2;
+					display: none;
+				}
+				.icon-tab__title {
+					font-size: 1.5rem;
+					margin-top: 1.5rem;
+				}
+			}
+		}
+	}
+}
+.container-class {
+	.class-info {
+		@include flex-direction(column);
+		&:nth-of-type(1) {
+		}
+		&:nth-of-type(2) {
+			padding-top: 0;
+			.class-info__review {
+				width: 100%;
+				.mCustomScrollBox {
+					.mCSB_container {
+					}
+				}
+				.info-review-card-list {
+					.review-card {
+					}
+				}
+			}
+			.class-info__cont {
+				position: absolute;
+				top: 100%;
+				margin-right: 0;
+				margin-left: 0;
+			}
+		}
+		&:nth-of-type(3) {
+			margin-top: 100%;
+			.class-info__review {
+				.mCustomScrollBox {
+					.mCSB_container {
+					}
+				}
+				.info-review-card-list {
+					.review-card {
+					}
+				}
+			}
+			.class-info__cont {
+			}
+		}
+		.class-info__review {
+			height: 35rem;
+			width: 100%;
+			.mCustomScrollBox {
+				.mCSB_container {
+				}
+			}
+			.info-review-card-list {
+			width: 310vw;
+			height: 35rem;
+				.review-card {
+					width: 18%;
+					height: 30rem;
+					&.appear{
+					}
+					.card-img {
+					}
+					.card-cont {
+						.cont-count {
+						}
+						.cont-eval {
+							margin-top: 121%;
+							img {
+								height: 1.6rem;
+								margin-right: 0.7rem;
+							}
+						}
+						.cont-comment {
+							margin-top: 1.5rem;
+							p {
+								font-size: 1.1rem;
+							}
+						}
+					}
+				}
+			}
+		}
+		.class-info__cont {
+			width: 100%;
+			margin-left: 0;
+			margin-right: 0;
+			.info-cont__text {
+				.text-title-line {
+					span {
+					}
+				}
+				.text-title {
+					font-size: 2rem;
+				}
+				.text-desc {
+					width: 70%;
+					&.appear {
+					}
+				}
+			}
+			.info-cont__benefit {
+				.benefit-tab {
+					width: 27%;
+					img {
+						height: 4.3rem;
+					}
+					span {
+						font-size: 1.1rem;
+					}
+				}
+			}
+			.info-cont__btn {
+				.btn-name {
+					margin-left: 30%;
+					font-size: 1.15rem;
+					padding: 1.3rem 4rem;
+				}
+			}
+		}
+	}
+}
+.container-cost {
+	display: block;
+	padding: 0 $margin-mobile;
+	.cost-wrapper {
+		width: 100%;
+		@include flex-direction(column);
+		.cost-tab {
+			@include flex-direction(row);
+			margin-left: 0;
+			margin-right: 0;
+			width: 100%;
+			height: 21rem;
+			@include box-sizing(border-box);
+			margin-bottom: 1rem;
+			&:nth-of-type(1) {
+				margin-left: 0;
+			}
+			&.choose {
+				.cost-tab__choose {
+					span {
+					}
+				}
+			}
+			.cost-tab__icon {
+				width: 40%;
+				height: 10rem;
+				.cost-tab__icon-icon {
+				}
+				.cost-tab__icon-effect {
+				}
+				.cost-tab__icon-title {
+					word-break: keep-all;
+					line-height: 1.5;
+				}
+			}
+			.cost-tab__option {
+				width: 60%;
+				position: absolute;
+				top: 0;
+				right: 0;
+				margin-top: 1rem;
+				.option {
+					margin-top: 1.2rem;
+					.option-icon {
+					}
+					.option-input {
+						width: 2.5em;
+					}
+					.option-unit {
+					}
+				}
+			}
+			.cost-tab__benefit {
+				display: none;
+			}
+			.cost-tab__total {
+				width: 60%;
+				position: absolute;
+				right: 0;
+				padding-right: 9%;
+				text-align: right;
+				font-size: 2rem;
+			}
+			.cost-tab__choose {
+				width: 60%;
+				position: absolute;
+				right: 0;
+				top: 65%;
+				display: inline;
+				margin-top: 3rem;
+				span {
+					font-size: 1.1rem;
+					padding: 1rem 3rem;
+					margin-left: 43%;
+				}
+			}
+		}
+	}
+	.cost-final {
+		width: 78%;
+		margin-left: 22%;
+		.cost-final__list {
+		}
+		.cost-final__result {
+			.result-title {
+			}
+			.result-money {
+				font-size: 3.5rem;
+			}
+		}
+		.cost-final__next {
+			margin-top: 1rem;
+			.next-reset {
+				font-size: 1.1rem;
+			}
+			.next-step {
+				font-size: 1.1rem;
+			}
+		}
+	}
+}
 }
