--- a/stylesheets/css/header.css
+++ b/stylesheets/css/header.css
@@ -39,7 +39,7 @@ body { width: 100%; overflow-x: hidden; }
 @media screen and (min-width: 769px) and (max-width: 1024px) { .header .logo { width: 18vw; height: 170px; left: 60px; } }
 @media screen and (max-width: 768px) { .header { height: 60px; }
   .header .gnb { display: none; width: 100%; height: 0; position: fixed; z-index: 3; }
-  .header .gnb.mobile-menu { -webkit-animation: gnb-mobile 0.5s ease; animation: gnb-mobile 0.5s ease; height: 100vh; }
+  .header .gnb.mobile-menu { -webkit-animation: gnb-mobile 0.5s ease; animation: gnb-mobile 0.5s ease; height: 100vh; overflow-y: hidden; }
   .header .gnb .gnb-list { -webkit-box-direction: column; -ms-flex-direction: column; flex-direction: column; margin-left: 0; width: 100%; height: 70%; padding-top: 30%; padding-bottom: 10%; }
   .header .gnb .gnb-list .gnb-tab { width: 100%; height: calc(100% / 3); }
   .header .gnb .gnb-list .gnb-tab:nth-of-type(1) { position: relative; top: auto; right: 0; }
