--- a/stylesheets/css/location.css
+++ b/stylesheets/css/location.css
@@ -78,6 +78,12 @@
   100% { width: 100%; } }
 @keyframes loading-bar { 0% { width: 0%; }
   100% { width: 100%; } }
+@-webkit-keyframes gnb-mobile { 0% { height: 0; }
+  100% { height: 100vh; } }
+@-moz-keyframes gnb-mobile { 0% { height: 0; }
+  100% { height: 100vh; } }
+@keyframes gnb-mobile { 0% { height: 0; }
+  100% { height: 100vh; } }
 @-webkit-keyframes letter-appear { 0% { -webkit-transform: translate(0, 20px); opacity: 0; }
   50% { opacity: 1; }
   100% { -webkit-transform: translate(0, 0); opacity: 1; } }
@@ -265,5 +271,37 @@ body { width: 100%; overflow-x: hidden; }
   .container .container-content .introduce-wrapper .introduce-part .introduce-part__desc .desc-bg .desc-text .desc-text__desc { font-size: 1.15rem; }
   .container .container-content .gallery-wrapper .gallery-tab-list .gallery-tab { width: calc(100% / 3); }
   .container .container-content .gallery-wrapper .gallery-dir { margin-top: 14%; margin-bottom: 5rem; } }
+@media screen and (max-width: 768px) { .jumbotron .jumbotron-img img { width: auto; height: 100%; }
+  .container .container-title .title { font-size: 2rem; }
+  .container .container-title .description { width: 65%; font-size: 1rem; }
+  .container .container-title .button .button-tab { font-size: 1.2rem; padding: 1.2rem 4rem; }
+  .container .container-content .location-warpper { height: 29rem; padding: 0 20px; -webkit-box-direction: column; -ms-flex-direction: column; flex-direction: column; }
+  .container .container-content .location-warpper .location-map { position: relative; width: 100%; height: 23rem; }
+  .container .container-content .location-warpper .location-map img { width: 117%; height: auto; position: absolute; top: -17%; left: 0; }
+  .container .container-content .location-warpper .location-tab-wrapper { width: 100%; height: 6rem; -webkit-box-direction: row; -ms-flex-direction: row; flex-direction: row; }
+  .container .container-content .location-warpper .location-tab-wrapper .location-tab-desc { display: none; }
+  .container .container-content .location-warpper .location-tab-wrapper .location-tab { width: 25%; height: 100%; -webkit-box-direction: column; -ms-flex-direction: column; flex-direction: column; border-top: none; border-left: 1px solid #606060; cursor: pointer; }
+  .container .container-content .location-warpper .location-tab-wrapper .location-tab:nth-of-type(1) { border-left: none; }
+  .container .container-content .location-warpper .location-tab-wrapper .location-tab img { margin-top: 1.6rem; }
+  .container .container-content .location-warpper .location-tab-wrapper .location-tab p { display: none; }
+  .container .container-content .introduce-wrapper { margin-top: 0; padding: 0 20px; }
+  .container .container-content .introduce-wrapper .introduce-part { flex-direction: column; height: 31rem; }
+  .container .container-content .introduce-wrapper .introduce-part:nth-of-type(2) .introduce-part__desc { position: absolute; bottom: 0; z-index: 2; }
+  .container .container-content .introduce-wrapper .introduce-part:nth-of-type(2) .introduce-part__desc .desc-bg { margin-left: 0; margin-right: 0; left: 0; right: auto; }
+  .container .container-content .introduce-wrapper .introduce-part:nth-of-type(2) .introduce-part__desc .desc-bg .desc-text { -webkit-transform: translate(-2rem, 0); -ms-transform: translate(-2rem, 0); transform: translate(-2rem, 0); }
+  .container .container-content .introduce-wrapper .introduce-part:nth-of-type(2) .introduce-part__desc .desc-bg .desc-text .desc-text__title { margin-top: 2rem; }
+  .container .container-content .introduce-wrapper .introduce-part .introduce-part__img { width: 100%; height: 17rem; }
+  .container .container-content .introduce-wrapper .introduce-part .introduce-part__img span { font-size: 3.5rem; margin-top: 25%; }
+  .container .container-content .introduce-wrapper .introduce-part .introduce-part__desc { width: 100%; height: 14rem; -webkit-transform: translateY(-20px); -ms-transform: translateY(-20px); transform: translateY(-20px); }
+  .container .container-content .introduce-wrapper .introduce-part .introduce-part__desc .desc-bg { position: absolute; width: 75%; height: 14rem; right: 0; margin-left: auto; }
+  .container .container-content .introduce-wrapper .introduce-part .introduce-part__desc .desc-bg .desc-text { -webkit-transform: translate(2rem, 0); -ms-transform: translate(2rem, 0); transform: translate(2rem, 0); }
+  .container .container-content .introduce-wrapper .introduce-part .introduce-part__desc .desc-bg .desc-text .desc-text__title { font-size: 1.5rem; line-height: 1.5; }
+  .container .container-content .introduce-wrapper .introduce-part .introduce-part__desc .desc-bg .desc-text .desc-text__desc { font-size: 1rem; }
+  .container .container-content .gallery-wrapper { padding: 0 20px; }
+  .container .container-content .gallery-wrapper .gallery-tab-list .gallery-tab { width: 100%; }
+  .container .container-content .gallery-wrapper .gallery-tab-list .gallery-tab:nth-of-type(2) { display: none; }
+  .container .container-content .gallery-wrapper .gallery-tab-list .gallery-tab:nth-of-type(3) { display: none; }
+  .container .container-content .gallery-wrapper .gallery-tab-list .gallery-tab .gallery-tab__date .date-num { margin-left: 0; }
+  .container .container-content .gallery-wrapper .gallery-dir { margin-top: 7%; margin-bottom: 5rem; float: none; margin-left: calc((100% - 14rem) / 2); } }
 
 /*# sourceMappingURL=location.css.map */
