--- a/stylesheets/location.scss
+++ b/stylesheets/location.scss
@@ -635,5 +635,182 @@ body {
 }
 }
 @media screen and (max-width: 768px) {
-	
+.jumbotron {
+	.jumbotron-img {
+		img {
+			width: auto;
+			height: 100%;
+		}
+	}
+}
+.container {
+	.container-title {
+		.title-line {
+		}
+		.title {
+		font-size: 2rem;
+		}
+		.description {
+			width: 65%;
+			font-size: 1rem;
+		}
+		.button {
+			.button-tab {
+				font-size: 1.2rem;
+				padding: 1.2rem 4rem;
+			}			
+		}
+	}
+	.container-content {
+		.location-warpper {
+			height: 29rem;
+			padding: 0 $margin-mobile;
+			@include flex-direction(column);
+			.location-map {
+				position: relative;
+				width: 100%;
+				height: 23rem;
+				img {
+					width: 117%;
+					height: auto;
+					position: absolute;
+					top: -17%;
+					left: 0;
+				}
+			}
+			.location-tab-wrapper {
+				width: 100%;
+				height: 6rem;
+				@include flex-direction(row);
+				.location-tab-desc {
+					display: none;
+					.tab-desc__title {
+					}
+					.tab-desc__desc {
+					}
+				}
+				.location-tab {
+					width: 25%;
+					height: 100%;
+					@include flex-direction(column);
+					border-top: none;
+					border-left: 1px solid $gray2;
+					cursor: pointer;
+					&:nth-of-type(1) {
+						border-left: none;
+					}
+					img {
+						margin-top: 1.6rem;
+					}
+					p {
+						display: none;
+					}
+				}
+			}
+		}
+		.introduce-wrapper {
+			margin-top: 0;
+			padding: 0 $margin-mobile;
+			.introduce-part {
+				flex-direction: column;
+				height: 31rem;
+				&:nth-of-type(2) {
+					.introduce-part__desc {
+						position: absolute;
+						bottom: 0;
+						z-index: 2;
+						.desc-bg {
+							margin-left: 0;
+							margin-right: 0;
+							left: 0;
+							right: auto;
+							.desc-text {
+								@include transform(translate(-2rem,0));
+								.desc-text__title {
+									margin-top: 2rem;
+								}
+								.desc-text__desc {
+								}
+							}
+						}
+					}
+				}
+				&:nth-of-type(3) {
+				}
+				.introduce-part__img {
+					width: 100%;
+					height: 17rem;
+					img {
+					}
+					span {
+						font-size: 3.5rem;
+						margin-top: 25%;
+					}
+				}
+				.introduce-part__desc {
+					width: 100%;
+					height: 14rem;
+					@include transform(translateY(-20px));
+					.desc-bg {
+						position: absolute;
+						width: 75%;
+						height: 14rem;
+						right: 0;
+						margin-left: auto;
+						.desc-text {
+							@include transform(translate(2rem,0));
+							.desc-text__title {
+								font-size: 1.5rem;
+								line-height: 1.5;
+							}
+							.desc-text__desc {
+								font-size: 1rem;
+							}
+						}
+					}
+				}
+			}
+		}
+		.gallery-wrapper {
+			padding: 0 $margin-mobile;
+			.gallery-tab-list {
+				.gallery-tab {
+					width: 100%;
+					&:nth-of-type(2){
+						display: none;
+					}
+					&:nth-of-type(3){
+						display: none;
+					}
+					.gallery-tab__img {
+						img {
+						}
+					}
+					.gallery-tab__date {
+						.date-num {
+							margin-left: 0;
+						}
+						.date-line {
+						}
+					}
+				}
+			}
+			.gallery-dir {
+				margin-top: 7%;
+				margin-bottom: 5rem;
+				float: none;
+				margin-left: calc((100% - 14rem) / 2);
+				.gallery-dir__tab {
+					img {
+					}
+					&.prev {
+						img {
+						}
+					}
+					&.next {}
+				}
+			}
+		}
+	}
+}
 }
