--- a/stylesheets/css/rent.css
+++ b/stylesheets/css/rent.css
@@ -318,7 +318,7 @@ body { width: 100%; overflow-x: hidden; }
   .container .search-wrapper .search-date .search-date__input .date-input input { width: 4rem; height: 3rem; font-size: 1.5rem; line-height: 2rem; margin-right: 0.4rem; }
   .container .search-wrapper .search-date .search-date__input .date-input span { font-size: 2rem; }
   .container .search-wrapper .search-date .search-date__btn { width: 50%; height: 100%; margin-left: 0; display: inline-block; }
-  .container .search-wrapper .search-date .search-date__btn span { font-size: 1.35rem; padding: 1.35rem 3rem; margin-left: 18%; }
+  .container .search-wrapper .search-date .search-date__btn span { font-size: 1.1rem; padding: 1.1rem 3rem; margin-left: 18%; }
   .container .rent-wrapper { padding: 0 20px; }
   .container .rent-wrapper .rent-category { padding: 0; }
   .container .rent-wrapper .rent-category .category-tab { width: 44%; }
@@ -336,10 +336,10 @@ body { width: 100%; overflow-x: hidden; }
   .container .rent-wrapper .rent-item-list .item .item-info .info-spec { width: 53%; }
   .container .rent-wrapper .rent-item-list .item .item-info .info-spec .info-spec__unit { width: 50%; }
   .container .rent-wrapper .rent-item-list .item .item-info .info-spec .info-spec__value { width: 50%; }
-  .shopbag { width: 5rem; height: 5rem; position: fixed; top: auto; right: 20px; bottom: 5%; border-radius: 50%; -webkit-transition: all 0.5s ease; -o-transition: all 0.5s ease; transition: all 0.5s ease; -webkit-box-shadow: 0 5px 5px rgba(40, 40, 40, 0.7); -moz-box-shadow: 0 5px 5px rgba(40, 40, 40, 0.7); box-shadow: 0 5px 5px rgba(40, 40, 40, 0.7); z-index: 3; }
+  .shopbag { width: 5rem; height: 5rem; position: fixed; top: auto; right: 20px; bottom: 5%; border-radius: 50%; -webkit-box-shadow: 0 5px 5px rgba(40, 40, 40, 0.7); -moz-box-shadow: 0 5px 5px rgba(40, 40, 40, 0.7); box-shadow: 0 5px 5px rgba(40, 40, 40, 0.7); z-index: 3; }
   .shopbag.done { -webkit-animation: done 0.5s ease; animation: done 0.5s ease; }
   .shopbag .shopbag-icon { z-index: 4; }
-  .shopbag .mobile-active { display: none; -webkit-transition: all 0.5s ease; -o-transition: all 0.5s ease; transition: all 0.5s ease; }
+  .shopbag .mobile-active { display: none; }
   .shopbag .mobile-active:before { content: ''; display: inline-block; width: 1rem; height: 1rem; -webkit-transform: rotate(45deg); -ms-transform: rotate(45deg); transform: rotate(45deg); border-right: 12px solid #f7ff5a; border-bottom: 12px solid #f7ff5a; position: absolute; left: 30%; bottom: -0.5rem; }
   .shopbag .mobile-active.active { display: inline-block; width: 5rem; height: 3rem; border-radius: 5px; background-color: #f7ff5a; position: fixed; bottom: calc(5% + 6.5rem); }
   .shopbag .mobile-active span { width: 1rem; height: 1rem; border-radius: 50%; background-color: #2b2b2b; display: inline-block; margin-left: 0.5rem; margin-top: 1rem; -webkit-transition: all 0.3s ease; -o-transition: all 0.3s ease; transition: all 0.3s ease; z-index: 3; }
