--- a/stylesheets/location.scss
+++ b/stylesheets/location.scss
@@ -712,9 +712,11 @@ body {
 			margin-top: 0;
 			padding: 0 $margin-mobile;
 			.introduce-part {
-				flex-direction: column;
+				@include flex-direction(column);
 				height: 31rem;
+				display: inline-block;
 				&:nth-of-type(2) {
+					@include align-items(normal);
 					.introduce-part__desc {
 						position: absolute;
 						bottom: 0;
@@ -751,6 +753,7 @@ body {
 					width: 100%;
 					height: 14rem;
 					@include transform(translateY(-20px));
+					display: inline-block;
 					.desc-bg {
 						position: absolute;
 						width: 75%;
